// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chartOptionsBuilder > outline chart fill > getChartOptions > Heatmap configuration > getChartOptions for heatmap > getHeatmapDataClasses > should return 7 data classes with valid color 1`] = `
[
  {
    "color": "rgb(212,246,255)",
    "from": 0,
    "to": 4.285714285714286,
  },
  {
    "color": "rgb(197,236,248)",
    "from": 4.285714285714286,
    "to": 8.571428571428571,
  },
  {
    "color": "rgb(138,217,241)",
    "from": 8.571428571428571,
    "to": 12.857142857142858,
  },
  {
    "color": "rgb(79,198,234)",
    "from": 12.857142857142858,
    "to": 17.142857142857142,
  },
  {
    "color": "rgb(20,178,226)",
    "from": 17.142857142857142,
    "to": 21.428571428571427,
  },
  {
    "color": "rgb(22,151,192)",
    "from": 21.428571428571427,
    "to": 25.71428571428571,
  },
  {
    "color": "rgb(0,110,145)",
    "from": 25.71428571428571,
    "to": 30,
  },
]
`;

exports[`chartOptionsBuilder > outline chart fill > getChartOptions > Heatmap configuration > getChartOptions for heatmap > getHeatmapDataClasses > should return empty array when there are no values in series 1`] = `[]`;

exports[`chartOptionsBuilder > outline chart fill > getChartOptions > Heatmap configuration > getChartOptions for heatmap > getHeatmapDataClasses > should return single dataClass when series have only one value 1`] = `
[
  {
    "color": "rgb(197,236,248)",
    "from": 10,
    "to": 10,
  },
]
`;

exports[`chartOptionsBuilder > outline chart fill > getDrillableSeries > in usecase of bar chart with 3 measures and view by attribute > with first and last drillable measures > should assign correct drillIntersection to pointData with drilldown true 1`] = `
[
  [
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "af2Ewj9Re2vK",
          "localIdentifier": "lostMetric",
          "name": "<button>Lost</button> ...",
          "ref": {
            "uri": "obj_1283",
          },
          "uri": "obj_1283",
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "created",
            "name": "Year created",
            "ref": {
              "uri": "obj_157",
            },
            "uri": "obj_157",
          },
          "identifier": "created.aag81lMifn6q",
          "localIdentifier": "yearCreatedAttribute",
          "name": "Year (Created)",
          "ref": {
            "uri": "obj_158",
          },
          "uri": "obj_158",
        },
        "attributeHeaderItem": {
          "name": "<button>2008</button>",
          "uri": "elem_158_2008",
        },
      },
    },
  ],
  undefined,
  [
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "alUEwmBtbwSh",
          "localIdentifier": "expectedMetric",
          "name": "Expected",
          "ref": {
            "uri": "obj_1285",
          },
          "uri": "obj_1285",
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "created",
            "name": "Year created",
            "ref": {
              "uri": "obj_157",
            },
            "uri": "obj_157",
          },
          "identifier": "created.aag81lMifn6q",
          "localIdentifier": "yearCreatedAttribute",
          "name": "Year (Created)",
          "ref": {
            "uri": "obj_158",
          },
          "uri": "obj_158",
        },
        "attributeHeaderItem": {
          "name": "<button>2008</button>",
          "uri": "elem_158_2008",
        },
      },
    },
  ],
]
`;

exports[`chartOptionsBuilder > outline chart fill > getDrillableSeries > in usecase of bar chart with stack by and view by attributes > should fill correct series color 1`] = `
[
  "rgb(232,247,252)",
  "rgb(230,249,244)",
]
`;

exports[`chartOptionsBuilder > outline chart fill > getDrillableSeries > in usecase of bubble chart with 3 measures and attribute > should assign correct drillIntersection to pointData with drilldown true 1`] = `
{
  "drillIntersection": [
    {
      "header": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
          "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          "name": "Amount",
          "ref": undefined,
        },
      },
    },
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.0%",
          "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
          "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          "name": "Win Rate",
          "ref": undefined,
        },
      },
    },
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.0%",
          "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
          "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
          "name": "Probability",
          "ref": undefined,
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.f_product.product",
            "name": "Product",
            "ref": undefined,
            "uri": "",
          },
          "granularity": null,
          "identifier": "label.f_product.product.name",
          "localIdentifier": "a_label.f_product.product.name",
          "name": "Product Name",
          "primaryLabel": {
            "identifier": "attr.f_product.product",
            "type": "displayForm",
          },
          "ref": undefined,
          "totalItems": [],
          "uri": "",
        },
        "attributeHeaderItem": {
          "name": "Grammar Plus",
          "uri": "Grammar Plus",
        },
      },
    },
  ],
  "drilldown": true,
  "format": "#,##0.0%",
  "name": "Grammar Plus",
  "x": 8042031.92,
  "y": 0.5722772277227722,
  "z": 0.61347,
}
`;

exports[`chartOptionsBuilder > outline chart fill > getDrillableSeries > in usecase of scatter plot with 2 measures and attribute > should assign correct drillIntersection to pointData with drilldown true 1`] = `
[
  [
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "af2Ewj9Re2vK",
          "localIdentifier": "lostMetric",
          "name": "<button>Lost</button> ...",
          "ref": {
            "uri": "obj_1283",
          },
          "uri": "obj_1283",
        },
      },
    },
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "afSEwRwdbMeQ",
          "localIdentifier": "wonMetric",
          "name": "Won",
          "ref": {
            "uri": "obj_1284",
          },
          "uri": "obj_1284",
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "created",
            "name": "Year created",
            "ref": {
              "uri": "obj_157",
            },
            "uri": "obj_157",
          },
          "identifier": "created.aag81lMifn6q",
          "localIdentifier": "yearCreatedAttribute",
          "name": "Year (Created)",
          "ref": {
            "uri": "obj_158",
          },
          "uri": "obj_158",
        },
        "attributeHeaderItem": {
          "name": "<button>2008</button>",
          "uri": "elem_158_2008",
        },
      },
    },
  ],
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in use case of bubble > should fill X, Y and Z with valid values when measure buckets are not empty 1`] = `
[
  {
    "color": "rgb(20,178,226)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "CompuSci",
        "x": 0,
        "y": 27222899.64,
        "z": 0.61087,
      },
    ],
    "legendIndex": 0,
    "name": "CompuSci",
    "seriesIndex": 0,
  },
  {
    "color": "rgb(0,193,141)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "Educationly",
        "x": 0,
        "y": 22946895.47,
        "z": 0.60014,
      },
    ],
    "legendIndex": 1,
    "name": "Educationly",
    "seriesIndex": 1,
  },
  {
    "color": "rgb(229,77,66)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "Explorer",
        "x": 0,
        "y": 38596194.86,
        "z": 0.57863,
      },
    ],
    "legendIndex": 2,
    "name": "Explorer",
    "seriesIndex": 2,
  },
  {
    "color": "rgb(241,134,0)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "Grammar Plus",
        "x": 0,
        "y": 8042031.92,
        "z": 0.61347,
      },
    ],
    "legendIndex": 3,
    "name": "Grammar Plus",
    "seriesIndex": 3,
  },
  {
    "color": "rgb(171,85,163)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "PhoenixSoft",
        "x": 0,
        "y": 9525857.91,
        "z": 0.615,
      },
    ],
    "legendIndex": 4,
    "name": "PhoenixSoft",
    "seriesIndex": 4,
  },
  {
    "color": "rgb(244,213,33)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "WonderKid",
        "x": 0,
        "y": 10291576.74,
        "z": 0.56987,
      },
    ],
    "legendIndex": 5,
    "name": "WonderKid",
    "seriesIndex": 5,
  },
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in use case of bubble > should update seriesIndex correctly when one of X, Y or Z has null data 1`] = `
[
  {
    "color": "rgb(171,85,163)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Dale Perdadtin",
        "x": 546,
        "y": 30,
        "z": 1776567.88,
      },
    ],
    "legendIndex": 0,
    "name": "Dale Perdadtin",
    "seriesIndex": 4,
  },
  {
    "color": "rgb(244,213,33)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Dave Bostadt",
        "x": 12,
        "y": 35,
        "z": 2615259.07,
      },
    ],
    "legendIndex": 1,
    "name": "Dave Bostadt",
    "seriesIndex": 5,
  },
  {
    "color": "rgb(148,161,174)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Ellen Jones",
        "x": 199,
        "y": 29,
        "z": 1471667.02,
      },
    ],
    "legendIndex": 2,
    "name": "Ellen Jones",
    "seriesIndex": 6,
  },
  {
    "color": "rgb(107,191,216)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Huey Jonas",
        "x": 475,
        "y": 31,
        "z": 2161030.33,
      },
    ],
    "legendIndex": 3,
    "name": "Huey Jonas",
    "seriesIndex": 7,
  },
  {
    "color": "rgb(181,136,177)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Jessica Traven",
        "x": 245,
        "y": 32,
        "z": 2280481.04,
      },
    ],
    "legendIndex": 4,
    "name": "Jessica Traven",
    "seriesIndex": 8,
  },
  {
    "color": "rgb(238,135,128)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "John Jovi",
        "x": 347,
        "y": 26,
        "z": 1769560.54,
      },
    ],
    "legendIndex": 5,
    "name": "John Jovi",
    "seriesIndex": 9,
  },
  {
    "color": "rgb(241,171,84)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Jon Jons",
        "x": 345,
        "y": 42,
        "z": 2346482.16,
      },
    ],
    "legendIndex": 6,
    "name": "Jon Jons",
    "seriesIndex": 10,
  },
  {
    "color": "rgb(133,209,188)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Lea Forbes",
        "x": 34,
        "y": 30,
        "z": 1705084.84,
      },
    ],
    "legendIndex": 7,
    "name": "Lea Forbes",
    "seriesIndex": 11,
  },
  {
    "color": "rgb(41,117,170)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Monique Babonas",
        "x": 323,
        "y": 30,
        "z": 2345090.98,
      },
    ],
    "legendIndex": 8,
    "name": "Monique Babonas",
    "seriesIndex": 12,
  },
  {
    "color": "rgb(4,140,103)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Paul Gomez",
        "x": 346,
        "y": 64,
        "z": 131675.42,
      },
    ],
    "legendIndex": 9,
    "name": "Paul Gomez",
    "seriesIndex": 13,
  },
  {
    "color": "rgb(181,60,51)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Paul Jacobs",
        "x": 457,
        "y": 88,
        "z": 1668600.86,
      },
    ],
    "legendIndex": 10,
    "name": "Paul Jacobs",
    "seriesIndex": 14,
  },
  {
    "color": "rgb(163,101,46)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Ravi Deetri",
        "x": 451,
        "y": 93,
        "z": 1649882.14,
      },
    ],
    "legendIndex": 11,
    "name": "Ravi Deetri",
    "seriesIndex": 15,
  },
  {
    "color": "rgb(140,57,132)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Thomas Gones",
        "x": 232,
        "y": 70,
        "z": 1229206.9,
      },
    ],
    "legendIndex": 12,
    "name": "Thomas Gones",
    "seriesIndex": 16,
  },
  {
    "color": "rgb(136,219,244)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Tom Stickler",
        "x": 311,
        "y": 71,
        "z": 457045.18,
      },
    ],
    "legendIndex": 13,
    "name": "Tom Stickler",
    "seriesIndex": 17,
  },
  {
    "color": "rgb(189,234,222)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Trevor Deegan",
        "x": 700,
        "y": 60,
        "z": 801178.61,
      },
    ],
    "legendIndex": 14,
    "name": "Trevor Deegan",
    "seriesIndex": 18,
  },
  {
    "color": "rgb(239,197,194)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Victor Crushetz",
        "x": 246,
        "y": 60,
        "z": 1065164.57,
      },
    ],
    "legendIndex": 15,
    "name": "Victor Crushetz",
    "seriesIndex": 19,
  },
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in use case of treemap > with one measure and stack by attribute > should fill correct series data 1`] = `
[
  {
    "borderColor": "rgb(20,178,226)",
    "color": "rgb(232,247,252)",
    "format": "$#,##0.00",
    "id": "0",
    "legendIndex": 0,
    "name": "Amount",
    "showInLegend": true,
  },
  {
    "color": "rgb(20,178,226)",
    "format": "$#,##0.00",
    "name": "West Coast",
    "parent": "0",
    "showInLegend": false,
    "value": 88608360.12,
    "x": 0,
    "y": 1,
  },
  {
    "color": "rgb(114,209,238)",
    "format": "$#,##0.00",
    "name": "East Coast",
    "parent": "0",
    "showInLegend": false,
    "value": 28017096.42,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in use case of treemap > with one measure and view by attribute > should fill correct series data 1`] = `
[
  {
    "borderColor": "rgb(20,178,226)",
    "color": "rgb(232,247,252)",
    "format": "$#,##0.00",
    "legendIndex": 0,
    "name": "CompuSci",
    "value": 27222899.64,
  },
  {
    "borderColor": "rgb(0,193,141)",
    "color": "rgb(230,249,244)",
    "format": "$#,##0.00",
    "legendIndex": 1,
    "name": "Educationly",
    "value": 22946895.47,
  },
  {
    "borderColor": "rgb(229,77,66)",
    "color": "rgb(252,237,236)",
    "format": "$#,##0.00",
    "legendIndex": 2,
    "name": "Explorer",
    "value": 38596194.86,
  },
  {
    "borderColor": "rgb(241,134,0)",
    "color": "rgb(254,243,230)",
    "format": "$#,##0.00",
    "legendIndex": 3,
    "name": "Grammar Plus",
    "value": 8042031.92,
  },
  {
    "borderColor": "rgb(171,85,163)",
    "color": "rgb(247,238,246)",
    "format": "$#,##0.00",
    "legendIndex": 4,
    "name": "PhoenixSoft",
    "value": 9525857.91,
  },
  {
    "borderColor": "rgb(244,213,33)",
    "color": "rgb(254,251,233)",
    "format": "$#,##0.00",
    "legendIndex": 5,
    "name": "WonderKid",
    "value": 10291576.74,
  },
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in use case of treemap > with one measure, view by and stack by attribute > should fill correct series data 1`] = `18`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in use case of treemap > with only one measure > should fill correct series color 1`] = `"rgb(232,247,252)"`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in use case of treemap > with only one measure > should fill correct series data 1`] = `
{
  "borderColor": "rgb(20,178,226)",
  "color": "rgb(232,247,252)",
  "format": "$#,##0.00",
  "legendIndex": 0,
  "name": "Amount",
  "value": 116625456.54,
}
`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in use case of treemap > with two measures and stack by attribute including client sorting > should fill correct series data 1`] = `14`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in usecase of bar chart with 3 measures and view by attribute > should fill correct series color 1`] = `
[
  "rgb(232,247,252)",
  "rgb(230,249,244)",
  "rgb(252,237,236)",
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeries > in usecase of bar chart with stack by and view by attributes > should fill correct series color 1`] = `
[
  "rgb(232,247,252)",
  "rgb(230,249,244)",
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeriesItemData > in usecase of pie chart and treemap with metrics only > should fill correct pointData color 1`] = `
[
  "rgb(232,247,252)",
  "rgb(230,249,244)",
  "rgb(252,237,236)",
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeriesItemData > in usecase of pie chart and treemap with metrics only > should fill correct pointData color 2`] = `
[
  "rgb(232,247,252)",
  "rgb(230,249,244)",
  "rgb(252,237,236)",
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeriesItemData > in usecase of pie chart with an attribute > should fill correct pointData color 1`] = `
[
  "rgb(232,247,252)",
  "rgb(230,249,244)",
  "rgb(252,237,236)",
  "rgb(254,243,230)",
  "rgb(247,238,246)",
  "rgb(254,251,233)",
]
`;

exports[`chartOptionsBuilder > outline chart fill > getSeriesItemData > in usecase of pie chart with an attribute > should fill correct pointData color 2`] = `
[
  "rgb(232,247,252)",
  "rgb(230,249,244)",
  "rgb(252,237,236)",
  "rgb(254,243,230)",
  "rgb(247,238,246)",
  "rgb(254,251,233)",
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getChartOptions > Heatmap configuration > getChartOptions for heatmap > getHeatmapDataClasses > should return 7 data classes with valid color 1`] = `
[
  {
    "color": "rgb(212,246,255)",
    "from": 0,
    "to": 4.285714285714286,
  },
  {
    "color": "rgb(197,236,248)",
    "from": 4.285714285714286,
    "to": 8.571428571428571,
  },
  {
    "color": "rgb(138,217,241)",
    "from": 8.571428571428571,
    "to": 12.857142857142858,
  },
  {
    "color": "rgb(79,198,234)",
    "from": 12.857142857142858,
    "to": 17.142857142857142,
  },
  {
    "color": "rgb(20,178,226)",
    "from": 17.142857142857142,
    "to": 21.428571428571427,
  },
  {
    "color": "rgb(22,151,192)",
    "from": 21.428571428571427,
    "to": 25.71428571428571,
  },
  {
    "color": "rgb(0,110,145)",
    "from": 25.71428571428571,
    "to": 30,
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getChartOptions > Heatmap configuration > getChartOptions for heatmap > getHeatmapDataClasses > should return empty array when there are no values in series 1`] = `[]`;

exports[`chartOptionsBuilder > pattern chart fill > getChartOptions > Heatmap configuration > getChartOptions for heatmap > getHeatmapDataClasses > should return single dataClass when series have only one value 1`] = `
[
  {
    "color": "rgb(197,236,248)",
    "from": 10,
    "to": 10,
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getDrillableSeries > in usecase of bar chart with 3 measures and view by attribute > with first and last drillable measures > should assign correct drillIntersection to pointData with drilldown true 1`] = `
[
  [
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "af2Ewj9Re2vK",
          "localIdentifier": "lostMetric",
          "name": "<button>Lost</button> ...",
          "ref": {
            "uri": "obj_1283",
          },
          "uri": "obj_1283",
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "created",
            "name": "Year created",
            "ref": {
              "uri": "obj_157",
            },
            "uri": "obj_157",
          },
          "identifier": "created.aag81lMifn6q",
          "localIdentifier": "yearCreatedAttribute",
          "name": "Year (Created)",
          "ref": {
            "uri": "obj_158",
          },
          "uri": "obj_158",
        },
        "attributeHeaderItem": {
          "name": "<button>2008</button>",
          "uri": "elem_158_2008",
        },
      },
    },
  ],
  undefined,
  [
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "alUEwmBtbwSh",
          "localIdentifier": "expectedMetric",
          "name": "Expected",
          "ref": {
            "uri": "obj_1285",
          },
          "uri": "obj_1285",
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "created",
            "name": "Year created",
            "ref": {
              "uri": "obj_157",
            },
            "uri": "obj_157",
          },
          "identifier": "created.aag81lMifn6q",
          "localIdentifier": "yearCreatedAttribute",
          "name": "Year (Created)",
          "ref": {
            "uri": "obj_158",
          },
          "uri": "obj_158",
        },
        "attributeHeaderItem": {
          "name": "<button>2008</button>",
          "uri": "elem_158_2008",
        },
      },
    },
  ],
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getDrillableSeries > in usecase of bar chart with stack by and view by attributes > should fill correct series color 1`] = `
[
  {
    "pattern": {
      "color": "rgb(20,178,226)",
      "height": 8,
      "opacity": 1,
      "path": {
        "d": "M4 0L8 4L4 8L0 4Z",
        "strokeWidth": 1,
      },
      "width": 8,
    },
  },
  {
    "pattern": {
      "color": "rgb(0,193,141)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H1V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getDrillableSeries > in usecase of bubble chart with 3 measures and attribute > should assign correct drillIntersection to pointData with drilldown true 1`] = `
{
  "drillIntersection": [
    {
      "header": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
          "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          "name": "Amount",
          "ref": undefined,
        },
      },
    },
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.0%",
          "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
          "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          "name": "Win Rate",
          "ref": undefined,
        },
      },
    },
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.0%",
          "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
          "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
          "name": "Probability",
          "ref": undefined,
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.f_product.product",
            "name": "Product",
            "ref": undefined,
            "uri": "",
          },
          "granularity": null,
          "identifier": "label.f_product.product.name",
          "localIdentifier": "a_label.f_product.product.name",
          "name": "Product Name",
          "primaryLabel": {
            "identifier": "attr.f_product.product",
            "type": "displayForm",
          },
          "ref": undefined,
          "totalItems": [],
          "uri": "",
        },
        "attributeHeaderItem": {
          "name": "Grammar Plus",
          "uri": "Grammar Plus",
        },
      },
    },
  ],
  "drilldown": true,
  "format": "#,##0.0%",
  "name": "Grammar Plus",
  "x": 8042031.92,
  "y": 0.5722772277227722,
  "z": 0.61347,
}
`;

exports[`chartOptionsBuilder > pattern chart fill > getDrillableSeries > in usecase of scatter plot with 2 measures and attribute > should assign correct drillIntersection to pointData with drilldown true 1`] = `
[
  [
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "af2Ewj9Re2vK",
          "localIdentifier": "lostMetric",
          "name": "<button>Lost</button> ...",
          "ref": {
            "uri": "obj_1283",
          },
          "uri": "obj_1283",
        },
      },
    },
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "afSEwRwdbMeQ",
          "localIdentifier": "wonMetric",
          "name": "Won",
          "ref": {
            "uri": "obj_1284",
          },
          "uri": "obj_1284",
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "created",
            "name": "Year created",
            "ref": {
              "uri": "obj_157",
            },
            "uri": "obj_157",
          },
          "identifier": "created.aag81lMifn6q",
          "localIdentifier": "yearCreatedAttribute",
          "name": "Year (Created)",
          "ref": {
            "uri": "obj_158",
          },
          "uri": "obj_158",
        },
        "attributeHeaderItem": {
          "name": "<button>2008</button>",
          "uri": "elem_158_2008",
        },
      },
    },
  ],
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in use case of bubble > should fill X, Y and Z with valid values when measure buckets are not empty 1`] = `
[
  {
    "color": "rgb(20,178,226)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "CompuSci",
        "x": 0,
        "y": 27222899.64,
        "z": 0.61087,
      },
    ],
    "legendIndex": 0,
    "name": "CompuSci",
    "seriesIndex": 0,
  },
  {
    "color": "rgb(0,193,141)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "Educationly",
        "x": 0,
        "y": 22946895.47,
        "z": 0.60014,
      },
    ],
    "legendIndex": 1,
    "name": "Educationly",
    "seriesIndex": 1,
  },
  {
    "color": "rgb(229,77,66)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "Explorer",
        "x": 0,
        "y": 38596194.86,
        "z": 0.57863,
      },
    ],
    "legendIndex": 2,
    "name": "Explorer",
    "seriesIndex": 2,
  },
  {
    "color": "rgb(241,134,0)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "Grammar Plus",
        "x": 0,
        "y": 8042031.92,
        "z": 0.61347,
      },
    ],
    "legendIndex": 3,
    "name": "Grammar Plus",
    "seriesIndex": 3,
  },
  {
    "color": "rgb(171,85,163)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "PhoenixSoft",
        "x": 0,
        "y": 9525857.91,
        "z": 0.615,
      },
    ],
    "legendIndex": 4,
    "name": "PhoenixSoft",
    "seriesIndex": 4,
  },
  {
    "color": "rgb(244,213,33)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "WonderKid",
        "x": 0,
        "y": 10291576.74,
        "z": 0.56987,
      },
    ],
    "legendIndex": 5,
    "name": "WonderKid",
    "seriesIndex": 5,
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in use case of bubble > should update seriesIndex correctly when one of X, Y or Z has null data 1`] = `
[
  {
    "color": "rgb(171,85,163)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Dale Perdadtin",
        "x": 546,
        "y": 30,
        "z": 1776567.88,
      },
    ],
    "legendIndex": 0,
    "name": "Dale Perdadtin",
    "seriesIndex": 4,
  },
  {
    "color": "rgb(244,213,33)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Dave Bostadt",
        "x": 12,
        "y": 35,
        "z": 2615259.07,
      },
    ],
    "legendIndex": 1,
    "name": "Dave Bostadt",
    "seriesIndex": 5,
  },
  {
    "color": "rgb(148,161,174)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Ellen Jones",
        "x": 199,
        "y": 29,
        "z": 1471667.02,
      },
    ],
    "legendIndex": 2,
    "name": "Ellen Jones",
    "seriesIndex": 6,
  },
  {
    "color": "rgb(107,191,216)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Huey Jonas",
        "x": 475,
        "y": 31,
        "z": 2161030.33,
      },
    ],
    "legendIndex": 3,
    "name": "Huey Jonas",
    "seriesIndex": 7,
  },
  {
    "color": "rgb(181,136,177)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Jessica Traven",
        "x": 245,
        "y": 32,
        "z": 2280481.04,
      },
    ],
    "legendIndex": 4,
    "name": "Jessica Traven",
    "seriesIndex": 8,
  },
  {
    "color": "rgb(238,135,128)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "John Jovi",
        "x": 347,
        "y": 26,
        "z": 1769560.54,
      },
    ],
    "legendIndex": 5,
    "name": "John Jovi",
    "seriesIndex": 9,
  },
  {
    "color": "rgb(241,171,84)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Jon Jons",
        "x": 345,
        "y": 42,
        "z": 2346482.16,
      },
    ],
    "legendIndex": 6,
    "name": "Jon Jons",
    "seriesIndex": 10,
  },
  {
    "color": "rgb(133,209,188)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Lea Forbes",
        "x": 34,
        "y": 30,
        "z": 1705084.84,
      },
    ],
    "legendIndex": 7,
    "name": "Lea Forbes",
    "seriesIndex": 11,
  },
  {
    "color": "rgb(41,117,170)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Monique Babonas",
        "x": 323,
        "y": 30,
        "z": 2345090.98,
      },
    ],
    "legendIndex": 8,
    "name": "Monique Babonas",
    "seriesIndex": 12,
  },
  {
    "color": "rgb(4,140,103)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Paul Gomez",
        "x": 346,
        "y": 64,
        "z": 131675.42,
      },
    ],
    "legendIndex": 9,
    "name": "Paul Gomez",
    "seriesIndex": 13,
  },
  {
    "color": "rgb(181,60,51)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Paul Jacobs",
        "x": 457,
        "y": 88,
        "z": 1668600.86,
      },
    ],
    "legendIndex": 10,
    "name": "Paul Jacobs",
    "seriesIndex": 14,
  },
  {
    "color": "rgb(163,101,46)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Ravi Deetri",
        "x": 451,
        "y": 93,
        "z": 1649882.14,
      },
    ],
    "legendIndex": 11,
    "name": "Ravi Deetri",
    "seriesIndex": 15,
  },
  {
    "color": "rgb(140,57,132)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Thomas Gones",
        "x": 232,
        "y": 70,
        "z": 1229206.9,
      },
    ],
    "legendIndex": 12,
    "name": "Thomas Gones",
    "seriesIndex": 16,
  },
  {
    "color": "rgb(136,219,244)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Tom Stickler",
        "x": 311,
        "y": 71,
        "z": 457045.18,
      },
    ],
    "legendIndex": 13,
    "name": "Tom Stickler",
    "seriesIndex": 17,
  },
  {
    "color": "rgb(189,234,222)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Trevor Deegan",
        "x": 700,
        "y": 60,
        "z": 801178.61,
      },
    ],
    "legendIndex": 14,
    "name": "Trevor Deegan",
    "seriesIndex": 18,
  },
  {
    "color": "rgb(239,197,194)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Victor Crushetz",
        "x": 246,
        "y": 60,
        "z": 1065164.57,
      },
    ],
    "legendIndex": 15,
    "name": "Victor Crushetz",
    "seriesIndex": 19,
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in use case of treemap > with one measure and stack by attribute > should fill correct series data 1`] = `
[
  {
    "borderColor": "rgb(20,178,226)",
    "color": {
      "pattern": {
        "color": "rgb(20,178,226)",
        "height": 8,
        "opacity": 1,
        "path": {
          "d": "M4 0L8 4L4 8L0 4Z",
          "strokeWidth": 1,
        },
        "width": 8,
      },
    },
    "format": "$#,##0.00",
    "id": "0",
    "legendIndex": 0,
    "name": "Amount",
    "showInLegend": true,
  },
  {
    "color": "rgb(20,178,226)",
    "format": "$#,##0.00",
    "name": "West Coast",
    "parent": "0",
    "showInLegend": false,
    "value": 88608360.12,
    "x": 0,
    "y": 1,
  },
  {
    "color": "rgb(114,209,238)",
    "format": "$#,##0.00",
    "name": "East Coast",
    "parent": "0",
    "showInLegend": false,
    "value": 28017096.42,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in use case of treemap > with one measure and view by attribute > should fill correct series data 1`] = `
[
  {
    "borderColor": "rgb(20,178,226)",
    "color": {
      "pattern": {
        "color": "rgb(20,178,226)",
        "height": 8,
        "opacity": 1,
        "path": {
          "d": "M4 0L8 4L4 8L0 4Z",
          "strokeWidth": 1,
        },
        "width": 8,
      },
    },
    "format": "$#,##0.00",
    "legendIndex": 0,
    "name": "CompuSci",
    "value": 27222899.64,
  },
  {
    "borderColor": "rgb(0,193,141)",
    "color": {
      "pattern": {
        "color": "rgb(0,193,141)",
        "height": 4,
        "opacity": 1,
        "path": {
          "d": "M0 0H1V4H0Z",
          "strokeWidth": 1,
        },
        "width": 4,
      },
    },
    "format": "$#,##0.00",
    "legendIndex": 1,
    "name": "Educationly",
    "value": 22946895.47,
  },
  {
    "borderColor": "rgb(229,77,66)",
    "color": {
      "pattern": {
        "color": "rgb(229,77,66)",
        "height": 4,
        "opacity": 1,
        "path": {
          "d": "M0 0H4V4H0Z",
          "strokeWidth": 1,
        },
        "width": 4,
      },
    },
    "format": "$#,##0.00",
    "legendIndex": 2,
    "name": "Explorer",
    "value": 38596194.86,
  },
  {
    "borderColor": "rgb(241,134,0)",
    "color": {
      "pattern": {
        "color": "rgb(241,134,0)",
        "height": 4,
        "opacity": 1,
        "path": {
          "d": "M0 0H4V1H0Z",
          "strokeWidth": 1,
        },
        "width": 4,
      },
    },
    "format": "$#,##0.00",
    "legendIndex": 3,
    "name": "Grammar Plus",
    "value": 8042031.92,
  },
  {
    "borderColor": "rgb(171,85,163)",
    "color": {
      "pattern": {
        "color": "rgb(171,85,163)",
        "height": 4,
        "opacity": 1,
        "path": {
          "d": "M3 2a1 1 0 1 1-2 0a1 1 0 1 1 2 0Z",
          "strokeWidth": 0.75,
        },
        "width": 4,
      },
    },
    "format": "$#,##0.00",
    "legendIndex": 4,
    "name": "PhoenixSoft",
    "value": 9525857.91,
  },
  {
    "borderColor": "rgb(244,213,33)",
    "color": {
      "pattern": {
        "color": "rgb(244,213,33)",
        "height": 6,
        "opacity": 1,
        "path": {
          "d": "M1.5 0H3V1.5H3Z",
          "strokeWidth": 1,
        },
        "width": 6,
      },
    },
    "format": "$#,##0.00",
    "legendIndex": 5,
    "name": "WonderKid",
    "value": 10291576.74,
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in use case of treemap > with one measure, view by and stack by attribute > should fill correct series data 1`] = `18`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in use case of treemap > with only one measure > should fill correct series color 1`] = `
{
  "pattern": {
    "color": "rgb(20,178,226)",
    "height": 8,
    "opacity": 1,
    "path": {
      "d": "M4 0L8 4L4 8L0 4Z",
      "strokeWidth": 1,
    },
    "width": 8,
  },
}
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in use case of treemap > with only one measure > should fill correct series data 1`] = `
{
  "borderColor": "rgb(20,178,226)",
  "color": {
    "pattern": {
      "color": "rgb(20,178,226)",
      "height": 8,
      "opacity": 1,
      "path": {
        "d": "M4 0L8 4L4 8L0 4Z",
        "strokeWidth": 1,
      },
      "width": 8,
    },
  },
  "format": "$#,##0.00",
  "legendIndex": 0,
  "name": "Amount",
  "value": 116625456.54,
}
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in use case of treemap > with two measures and stack by attribute including client sorting > should fill correct series data 1`] = `14`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in usecase of bar chart with 3 measures and view by attribute > should fill correct series color 1`] = `
[
  {
    "pattern": {
      "color": "rgb(20,178,226)",
      "height": 8,
      "opacity": 1,
      "path": {
        "d": "M4 0L8 4L4 8L0 4Z",
        "strokeWidth": 1,
      },
      "width": 8,
    },
  },
  {
    "pattern": {
      "color": "rgb(0,193,141)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H1V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(229,77,66)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H4V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeries > in usecase of bar chart with stack by and view by attributes > should fill correct series color 1`] = `
[
  {
    "pattern": {
      "color": "rgb(20,178,226)",
      "height": 8,
      "opacity": 1,
      "path": {
        "d": "M4 0L8 4L4 8L0 4Z",
        "strokeWidth": 1,
      },
      "width": 8,
    },
  },
  {
    "pattern": {
      "color": "rgb(0,193,141)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H1V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeriesItemData > in usecase of pie chart and treemap with metrics only > should fill correct pointData color 1`] = `
[
  {
    "pattern": {
      "color": "rgb(20,178,226)",
      "height": 8,
      "opacity": 1,
      "path": {
        "d": "M4 0L8 4L4 8L0 4Z",
        "strokeWidth": 1,
      },
      "width": 8,
    },
  },
  {
    "pattern": {
      "color": "rgb(0,193,141)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H1V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(229,77,66)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H4V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeriesItemData > in usecase of pie chart and treemap with metrics only > should fill correct pointData color 2`] = `
[
  {
    "pattern": {
      "color": "rgb(20,178,226)",
      "height": 8,
      "opacity": 1,
      "path": {
        "d": "M4 0L8 4L4 8L0 4Z",
        "strokeWidth": 1,
      },
      "width": 8,
    },
  },
  {
    "pattern": {
      "color": "rgb(0,193,141)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H1V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(229,77,66)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H4V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeriesItemData > in usecase of pie chart with an attribute > should fill correct pointData color 1`] = `
[
  {
    "pattern": {
      "color": "rgb(20,178,226)",
      "height": 8,
      "opacity": 1,
      "path": {
        "d": "M4 0L8 4L4 8L0 4Z",
        "strokeWidth": 1,
      },
      "width": 8,
    },
  },
  {
    "pattern": {
      "color": "rgb(0,193,141)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H1V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(229,77,66)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H4V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(241,134,0)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H4V1H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(171,85,163)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M3 2a1 1 0 1 1-2 0a1 1 0 1 1 2 0Z",
        "strokeWidth": 0.75,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(244,213,33)",
      "height": 6,
      "opacity": 1,
      "path": {
        "d": "M1.5 0H3V1.5H3Z",
        "strokeWidth": 1,
      },
      "width": 6,
    },
  },
]
`;

exports[`chartOptionsBuilder > pattern chart fill > getSeriesItemData > in usecase of pie chart with an attribute > should fill correct pointData color 2`] = `
[
  {
    "pattern": {
      "color": "rgb(20,178,226)",
      "height": 8,
      "opacity": 1,
      "path": {
        "d": "M4 0L8 4L4 8L0 4Z",
        "strokeWidth": 1,
      },
      "width": 8,
    },
  },
  {
    "pattern": {
      "color": "rgb(0,193,141)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H1V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(229,77,66)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H4V4H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(241,134,0)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M0 0H4V1H0Z",
        "strokeWidth": 1,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(171,85,163)",
      "height": 4,
      "opacity": 1,
      "path": {
        "d": "M3 2a1 1 0 1 1-2 0a1 1 0 1 1 2 0Z",
        "strokeWidth": 0.75,
      },
      "width": 4,
    },
  },
  {
    "pattern": {
      "color": "rgb(244,213,33)",
      "height": 6,
      "opacity": 1,
      "path": {
        "d": "M1.5 0H3V1.5H3Z",
        "strokeWidth": 1,
      },
      "width": 6,
    },
  },
]
`;

exports[`chartOptionsBuilder > solid chart fill > getChartOptions > Heatmap configuration > getChartOptions for heatmap > getHeatmapDataClasses > should return 7 data classes with valid color 1`] = `
[
  {
    "color": "rgb(212,246,255)",
    "from": 0,
    "to": 4.285714285714286,
  },
  {
    "color": "rgb(197,236,248)",
    "from": 4.285714285714286,
    "to": 8.571428571428571,
  },
  {
    "color": "rgb(138,217,241)",
    "from": 8.571428571428571,
    "to": 12.857142857142858,
  },
  {
    "color": "rgb(79,198,234)",
    "from": 12.857142857142858,
    "to": 17.142857142857142,
  },
  {
    "color": "rgb(20,178,226)",
    "from": 17.142857142857142,
    "to": 21.428571428571427,
  },
  {
    "color": "rgb(22,151,192)",
    "from": 21.428571428571427,
    "to": 25.71428571428571,
  },
  {
    "color": "rgb(0,110,145)",
    "from": 25.71428571428571,
    "to": 30,
  },
]
`;

exports[`chartOptionsBuilder > solid chart fill > getChartOptions > Heatmap configuration > getChartOptions for heatmap > getHeatmapDataClasses > should return empty array when there are no values in series 1`] = `[]`;

exports[`chartOptionsBuilder > solid chart fill > getChartOptions > Heatmap configuration > getChartOptions for heatmap > getHeatmapDataClasses > should return single dataClass when series have only one value 1`] = `
[
  {
    "color": "rgb(197,236,248)",
    "from": 10,
    "to": 10,
  },
]
`;

exports[`chartOptionsBuilder > solid chart fill > getDrillableSeries > in usecase of bar chart with 3 measures and view by attribute > with first and last drillable measures > should assign correct drillIntersection to pointData with drilldown true 1`] = `
[
  [
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "af2Ewj9Re2vK",
          "localIdentifier": "lostMetric",
          "name": "<button>Lost</button> ...",
          "ref": {
            "uri": "obj_1283",
          },
          "uri": "obj_1283",
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "created",
            "name": "Year created",
            "ref": {
              "uri": "obj_157",
            },
            "uri": "obj_157",
          },
          "identifier": "created.aag81lMifn6q",
          "localIdentifier": "yearCreatedAttribute",
          "name": "Year (Created)",
          "ref": {
            "uri": "obj_158",
          },
          "uri": "obj_158",
        },
        "attributeHeaderItem": {
          "name": "<button>2008</button>",
          "uri": "elem_158_2008",
        },
      },
    },
  ],
  undefined,
  [
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "alUEwmBtbwSh",
          "localIdentifier": "expectedMetric",
          "name": "Expected",
          "ref": {
            "uri": "obj_1285",
          },
          "uri": "obj_1285",
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "created",
            "name": "Year created",
            "ref": {
              "uri": "obj_157",
            },
            "uri": "obj_157",
          },
          "identifier": "created.aag81lMifn6q",
          "localIdentifier": "yearCreatedAttribute",
          "name": "Year (Created)",
          "ref": {
            "uri": "obj_158",
          },
          "uri": "obj_158",
        },
        "attributeHeaderItem": {
          "name": "<button>2008</button>",
          "uri": "elem_158_2008",
        },
      },
    },
  ],
]
`;

exports[`chartOptionsBuilder > solid chart fill > getDrillableSeries > in usecase of bar chart with stack by and view by attributes > should fill correct series color 1`] = `
[
  "rgb(20,178,226)",
  "rgb(0,193,141)",
]
`;

exports[`chartOptionsBuilder > solid chart fill > getDrillableSeries > in usecase of bubble chart with 3 measures and attribute > should assign correct drillIntersection to pointData with drilldown true 1`] = `
{
  "drillIntersection": [
    {
      "header": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
          "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          "name": "Amount",
          "ref": undefined,
        },
      },
    },
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.0%",
          "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
          "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          "name": "Win Rate",
          "ref": undefined,
        },
      },
    },
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.0%",
          "identifier": "b4e3e3c7-ead3-4d69-8be4-23bcfe5ff7aa",
          "localIdentifier": "m_b4e3e3c7_ead3_4d69_8be4_23bcfe5ff7aa",
          "name": "Probability",
          "ref": undefined,
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.f_product.product",
            "name": "Product",
            "ref": undefined,
            "uri": "",
          },
          "granularity": null,
          "identifier": "label.f_product.product.name",
          "localIdentifier": "a_label.f_product.product.name",
          "name": "Product Name",
          "primaryLabel": {
            "identifier": "attr.f_product.product",
            "type": "displayForm",
          },
          "ref": undefined,
          "totalItems": [],
          "uri": "",
        },
        "attributeHeaderItem": {
          "name": "Grammar Plus",
          "uri": "Grammar Plus",
        },
      },
    },
  ],
  "drilldown": true,
  "format": "#,##0.0%",
  "name": "Grammar Plus",
  "x": 8042031.92,
  "y": 0.5722772277227722,
  "z": 0.61347,
}
`;

exports[`chartOptionsBuilder > solid chart fill > getDrillableSeries > in usecase of scatter plot with 2 measures and attribute > should assign correct drillIntersection to pointData with drilldown true 1`] = `
[
  [
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "af2Ewj9Re2vK",
          "localIdentifier": "lostMetric",
          "name": "<button>Lost</button> ...",
          "ref": {
            "uri": "obj_1283",
          },
          "uri": "obj_1283",
        },
      },
    },
    {
      "header": {
        "measureHeaderItem": {
          "format": "#,##0.00",
          "identifier": "afSEwRwdbMeQ",
          "localIdentifier": "wonMetric",
          "name": "Won",
          "ref": {
            "uri": "obj_1284",
          },
          "uri": "obj_1284",
        },
      },
    },
    {
      "header": {
        "attributeHeader": {
          "formOf": {
            "identifier": "created",
            "name": "Year created",
            "ref": {
              "uri": "obj_157",
            },
            "uri": "obj_157",
          },
          "identifier": "created.aag81lMifn6q",
          "localIdentifier": "yearCreatedAttribute",
          "name": "Year (Created)",
          "ref": {
            "uri": "obj_158",
          },
          "uri": "obj_158",
        },
        "attributeHeaderItem": {
          "name": "<button>2008</button>",
          "uri": "elem_158_2008",
        },
      },
    },
  ],
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in use case of bubble > should fill X, Y and Z with valid values when measure buckets are not empty 1`] = `
[
  {
    "color": "rgb(20,178,226)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "CompuSci",
        "x": 0,
        "y": 27222899.64,
        "z": 0.61087,
      },
    ],
    "legendIndex": 0,
    "name": "CompuSci",
    "seriesIndex": 0,
  },
  {
    "color": "rgb(0,193,141)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "Educationly",
        "x": 0,
        "y": 22946895.47,
        "z": 0.60014,
      },
    ],
    "legendIndex": 1,
    "name": "Educationly",
    "seriesIndex": 1,
  },
  {
    "color": "rgb(229,77,66)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "Explorer",
        "x": 0,
        "y": 38596194.86,
        "z": 0.57863,
      },
    ],
    "legendIndex": 2,
    "name": "Explorer",
    "seriesIndex": 2,
  },
  {
    "color": "rgb(241,134,0)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "Grammar Plus",
        "x": 0,
        "y": 8042031.92,
        "z": 0.61347,
      },
    ],
    "legendIndex": 3,
    "name": "Grammar Plus",
    "seriesIndex": 3,
  },
  {
    "color": "rgb(171,85,163)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "PhoenixSoft",
        "x": 0,
        "y": 9525857.91,
        "z": 0.615,
      },
    ],
    "legendIndex": 4,
    "name": "PhoenixSoft",
    "seriesIndex": 4,
  },
  {
    "color": "rgb(244,213,33)",
    "data": [
      {
        "format": "#,##0.0%",
        "name": "WonderKid",
        "x": 0,
        "y": 10291576.74,
        "z": 0.56987,
      },
    ],
    "legendIndex": 5,
    "name": "WonderKid",
    "seriesIndex": 5,
  },
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in use case of bubble > should update seriesIndex correctly when one of X, Y or Z has null data 1`] = `
[
  {
    "color": "rgb(171,85,163)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Dale Perdadtin",
        "x": 546,
        "y": 30,
        "z": 1776567.88,
      },
    ],
    "legendIndex": 0,
    "name": "Dale Perdadtin",
    "seriesIndex": 4,
  },
  {
    "color": "rgb(244,213,33)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Dave Bostadt",
        "x": 12,
        "y": 35,
        "z": 2615259.07,
      },
    ],
    "legendIndex": 1,
    "name": "Dave Bostadt",
    "seriesIndex": 5,
  },
  {
    "color": "rgb(148,161,174)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Ellen Jones",
        "x": 199,
        "y": 29,
        "z": 1471667.02,
      },
    ],
    "legendIndex": 2,
    "name": "Ellen Jones",
    "seriesIndex": 6,
  },
  {
    "color": "rgb(107,191,216)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Huey Jonas",
        "x": 475,
        "y": 31,
        "z": 2161030.33,
      },
    ],
    "legendIndex": 3,
    "name": "Huey Jonas",
    "seriesIndex": 7,
  },
  {
    "color": "rgb(181,136,177)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Jessica Traven",
        "x": 245,
        "y": 32,
        "z": 2280481.04,
      },
    ],
    "legendIndex": 4,
    "name": "Jessica Traven",
    "seriesIndex": 8,
  },
  {
    "color": "rgb(238,135,128)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "John Jovi",
        "x": 347,
        "y": 26,
        "z": 1769560.54,
      },
    ],
    "legendIndex": 5,
    "name": "John Jovi",
    "seriesIndex": 9,
  },
  {
    "color": "rgb(241,171,84)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Jon Jons",
        "x": 345,
        "y": 42,
        "z": 2346482.16,
      },
    ],
    "legendIndex": 6,
    "name": "Jon Jons",
    "seriesIndex": 10,
  },
  {
    "color": "rgb(133,209,188)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Lea Forbes",
        "x": 34,
        "y": 30,
        "z": 1705084.84,
      },
    ],
    "legendIndex": 7,
    "name": "Lea Forbes",
    "seriesIndex": 11,
  },
  {
    "color": "rgb(41,117,170)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Monique Babonas",
        "x": 323,
        "y": 30,
        "z": 2345090.98,
      },
    ],
    "legendIndex": 8,
    "name": "Monique Babonas",
    "seriesIndex": 12,
  },
  {
    "color": "rgb(4,140,103)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Paul Gomez",
        "x": 346,
        "y": 64,
        "z": 131675.42,
      },
    ],
    "legendIndex": 9,
    "name": "Paul Gomez",
    "seriesIndex": 13,
  },
  {
    "color": "rgb(181,60,51)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Paul Jacobs",
        "x": 457,
        "y": 88,
        "z": 1668600.86,
      },
    ],
    "legendIndex": 10,
    "name": "Paul Jacobs",
    "seriesIndex": 14,
  },
  {
    "color": "rgb(163,101,46)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Ravi Deetri",
        "x": 451,
        "y": 93,
        "z": 1649882.14,
      },
    ],
    "legendIndex": 11,
    "name": "Ravi Deetri",
    "seriesIndex": 15,
  },
  {
    "color": "rgb(140,57,132)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Thomas Gones",
        "x": 232,
        "y": 70,
        "z": 1229206.9,
      },
    ],
    "legendIndex": 12,
    "name": "Thomas Gones",
    "seriesIndex": 16,
  },
  {
    "color": "rgb(136,219,244)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Tom Stickler",
        "x": 311,
        "y": 71,
        "z": 457045.18,
      },
    ],
    "legendIndex": 13,
    "name": "Tom Stickler",
    "seriesIndex": 17,
  },
  {
    "color": "rgb(189,234,222)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Trevor Deegan",
        "x": 700,
        "y": 60,
        "z": 801178.61,
      },
    ],
    "legendIndex": 14,
    "name": "Trevor Deegan",
    "seriesIndex": 18,
  },
  {
    "color": "rgb(239,197,194)",
    "data": [
      {
        "format": "$#,#00.00",
        "name": "Victor Crushetz",
        "x": 246,
        "y": 60,
        "z": 1065164.57,
      },
    ],
    "legendIndex": 15,
    "name": "Victor Crushetz",
    "seriesIndex": 19,
  },
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in use case of treemap > with one measure and stack by attribute > should fill correct series data 1`] = `
[
  {
    "color": "rgb(20,178,226)",
    "format": "$#,##0.00",
    "id": "0",
    "legendIndex": 0,
    "name": "Amount",
    "showInLegend": true,
  },
  {
    "color": "rgb(20,178,226)",
    "format": "$#,##0.00",
    "name": "West Coast",
    "parent": "0",
    "showInLegend": false,
    "value": 88608360.12,
    "x": 0,
    "y": 1,
  },
  {
    "color": "rgb(114,209,238)",
    "format": "$#,##0.00",
    "name": "East Coast",
    "parent": "0",
    "showInLegend": false,
    "value": 28017096.42,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in use case of treemap > with one measure and view by attribute > should fill correct series data 1`] = `
[
  {
    "borderColor": undefined,
    "color": "rgb(20,178,226)",
    "format": "$#,##0.00",
    "legendIndex": 0,
    "name": "CompuSci",
    "value": 27222899.64,
  },
  {
    "borderColor": undefined,
    "color": "rgb(0,193,141)",
    "format": "$#,##0.00",
    "legendIndex": 1,
    "name": "Educationly",
    "value": 22946895.47,
  },
  {
    "borderColor": undefined,
    "color": "rgb(229,77,66)",
    "format": "$#,##0.00",
    "legendIndex": 2,
    "name": "Explorer",
    "value": 38596194.86,
  },
  {
    "borderColor": undefined,
    "color": "rgb(241,134,0)",
    "format": "$#,##0.00",
    "legendIndex": 3,
    "name": "Grammar Plus",
    "value": 8042031.92,
  },
  {
    "borderColor": undefined,
    "color": "rgb(171,85,163)",
    "format": "$#,##0.00",
    "legendIndex": 4,
    "name": "PhoenixSoft",
    "value": 9525857.91,
  },
  {
    "borderColor": undefined,
    "color": "rgb(244,213,33)",
    "format": "$#,##0.00",
    "legendIndex": 5,
    "name": "WonderKid",
    "value": 10291576.74,
  },
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in use case of treemap > with one measure, view by and stack by attribute > should fill correct series data 1`] = `18`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in use case of treemap > with only one measure > should fill correct series color 1`] = `"rgb(20,178,226)"`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in use case of treemap > with only one measure > should fill correct series data 1`] = `
{
  "borderColor": undefined,
  "color": "rgb(20,178,226)",
  "format": "$#,##0.00",
  "legendIndex": 0,
  "name": "Amount",
  "value": 116625456.54,
}
`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in use case of treemap > with two measures and stack by attribute including client sorting > should fill correct series data 1`] = `14`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in usecase of bar chart with 3 measures and view by attribute > should fill correct series color 1`] = `
[
  "rgb(20,178,226)",
  "rgb(0,193,141)",
  "rgb(229,77,66)",
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeries > in usecase of bar chart with stack by and view by attributes > should fill correct series color 1`] = `
[
  "rgb(20,178,226)",
  "rgb(0,193,141)",
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeriesItemData > in usecase of pie chart and treemap with metrics only > should fill correct pointData color 1`] = `
[
  "rgb(20,178,226)",
  "rgb(0,193,141)",
  "rgb(229,77,66)",
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeriesItemData > in usecase of pie chart and treemap with metrics only > should fill correct pointData color 2`] = `
[
  "rgb(20,178,226)",
  "rgb(0,193,141)",
  "rgb(229,77,66)",
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeriesItemData > in usecase of pie chart with an attribute > should fill correct pointData color 1`] = `
[
  "rgb(20,178,226)",
  "rgb(0,193,141)",
  "rgb(229,77,66)",
  "rgb(241,134,0)",
  "rgb(171,85,163)",
  "rgb(244,213,33)",
]
`;

exports[`chartOptionsBuilder > solid chart fill > getSeriesItemData > in usecase of pie chart with an attribute > should fill correct pointData color 2`] = `
[
  "rgb(20,178,226)",
  "rgb(0,193,141)",
  "rgb(229,77,66)",
  "rgb(241,134,0)",
  "rgb(171,85,163)",
  "rgb(244,213,33)",
]
`;
